force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank_Scoring__c/Loopio__Go_No_Go_Question_Bank_Scoring__c.object-meta.xml
<CustomObject>
    <description>Stores scoring for each question.</description>
    <label>[deprecated] Go/No-Go Question Scoring</label>
    <nameField>
        <displayFormat>GNGQBS-{0000}</displayFormat>
        <label>[deprecated] Go/No-Go Question Scoring N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>[deprecated] Go/No-Go Question Scorings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>