force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank_Scoring__c/fields/Loopio__Go_No_Go_Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Go_No_Go_Question_Bank__c</fullName>
    <description>Master-Detail relation with Go/No-Go Question Bank.</description>
    <label>Go/No-Go Question</label>
    <referenceTo>Loopio__Go_No_Go_Question_Bank__c</referenceTo>
    <relationshipName>Go_No_Go_Question_Bank_Scorings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>