force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank_Scoring__c/fields/Loopio__Score__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Score__c</fullName>
    <description>Stores score of the answer.</description>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>