force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank_Scoring__c/fields/Loopio__Value__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Value__c</fullName>
    <description>Expected value of answer (required when Comparison Type of related Go/No-Go Question Bank is Value)</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>